--- a/styles.less
+++ b/styles.less
@@ -28,5 +28,15 @@ atom-text-editor {
 
 // To style other content in the text editor's shadow DOM, use the ::shadow expression
 atom-text-editor::shadow .cursor {
-  // border-color: red;
+  border-color: red;
+}
+.editor .cursor {
+  border-color: pink;
+}
+.vim-mode.command-mode {
+  .cursor, .cursor.blink-off {
+    background-color: #F00;
+    width: 7px !important;
+    visibility: visible;
+  }
 }
